# due-diligence-research

./: .env.example  .gitignore  AGENT_ORCHESTRATION.md  AUDIT-SPEC-FINAL.md  AUDIT-SPEC.md  AUDIT.md  CLAUDE.md  PLAN.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  repomix-output.xml  requirements.txt  test_financial_agent.py  test_legal_agent.py  test_verification_agent.py
.archive/: CHANGELOG.md  CLAUDE.md  DESIGN.md  PLAN.md  TREE.md
data/: checkpoints.db-shm  checkpoints.db-wal
docker/: Dockerfile
docs/: README.md  repomix-output.xml
docs-v2/: README.md
docs-v2/architecture/: LANGGRAPH_EXA_ARCHITECTURE.md  SESSION_MANAGEMENT.md  SYSTEM_ARCHITECTURE.md  SYSTEM_EVOLUTION_SUMMARY.md
docs-v2/implementation/: IMPLEMENTATION_ROADMAP.md
docs-v2/specifications/: CLI_FLOW_DIAGRAM.md  TECHNICAL_SPECIFICATIONS.md
docs-v2/workflows/: AZIMA_WORKFLOW_EXAMPLE.md
docs/design/: overview.md
docs/examples/: quick-start.md
docs/user-guide/: cli-reference.md  configuration.md  getting-started.md  reports.md  research-guide.md
reports/: apple-inc-20250917-105001.md  apple-inc-20250917-105144.md  apple-inc-20250917-105219.md  tesla-inc-20250915-234755.md  tesla-inc-20250916-160056.md  tesla-inc-20250917-103910.md  tesla-inc-20250917-105623.md  tesla-inc-20250917-120249.md
scripts/: deploy.py  setup.py
src/agents/: planner.py  supervisor.py
src/agents/task_agents/: financial.py  legal.py  osint.py  research.py  verification.py
src/api/: main.py
src/api/middleware/: errors.py  monitoring.py
src/cli/: __init__.py  main.py  main.py.broken
src/cli/commands/: config.py  reports.py  research.py  utils.py
src/cli/models/: config.py
src/cli/ui/: progress.py
src/config/: settings.py
src/security/: __init__.py  audit.py  encryption.py  monitoring.py
src/state/: checkpointer.py  definitions.py
src/workflows/: due_diligence.py  minimal.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_agents.py  test_security.py
tests/unit/agents/: test_financial_agent.py  test_legal_agent.py  test_osint_agent.py  test_research_agent.py  test_verification_agent.py
tests/unit/security/: test_security_features.py
