[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "due-diligence-exa"
version = "0.1.0"
description = "Multi-Agent Due Diligence System built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Due Diligence Team", email = "team@example.com"},
]
keywords = ["langgraph", "multi-agent", "due-diligence", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core LangGraph Stack
    "langgraph==0.6.7",
    "langgraph-supervisor==0.0.29",
    "langgraph-checkpoint-postgres==2.0.23",
    "langgraph-checkpoint-sqlite==2.0.11",
    "langchain==0.3.27",
    "langchain-openai==0.3.32",
    "langchain-anthropic==0.2.3",
    "langchain-exa==0.3.1",
    # API & Web Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.11.9",
    "pydantic-settings>=2.0.0",
    "httpx==0.27.0",
    # Database & Storage
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "sqlalchemy[asyncio]==2.0.23",
    # Vector Database
    "chromadb==0.5.0",
    # Monitoring & Observability
    "langsmith>=0.3.45",
    "opentelemetry-api==1.25.0",
    "prometheus-client==0.20.0",
    # Utilities
    "python-dotenv==1.0.0",
    "tenacity>=8.1.0,<9.0.0",
    "structlog==25.4.0",
    # CLI Framework
    "typer==0.9.0",
    "rich>=13.0.0,<14.0.0",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=25.1.0",
    "isort>=5.13.0",
    "mypy>=1.15.0,<2.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/example/due-diligence-exa"
Documentation = "https://github.com/example/due-diligence-exa#readme"
Repository = "https://github.com/example/due-diligence-exa"

[project.scripts]
dd = "src.cli.main:app"
due-diligence = "src.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
